--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -1,20 +1,20 @@
 body{
-    background: #0d7211;
+    background: #0d4211;
     font-family: tahoma;
     color: #989898;
 }
 
 #todo-table{
     position: relative;
-    width: 95%;
+    width: 50%;
     background: #090d13;
-    margin: 0 auto;
+    margin: 20 auto;
     padding: 20px;
     box-sizing: border-box;
 }
 
 #todo-table form:after{
-    margin: 0;
+    margin: 20px;
     content: '';
     display: block;
     clear: both;
@@ -45,11 +45,12 @@ button{
 ul{
     list-style-type: none;
     padding: 0;
+    padding-top: 60px;
     margin: 0;
 }
 
 li{
-    width: 100%;
+    width: 50%;
     padding: 20px;
     box-sizing: border-box;
     font-family: arial;
