--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -2,18 +2,18 @@
     <head>
         <title>Todo list</title>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha384-vtXRMe3mGCbOeY7l30aIg8H9p3GdeSe4IFlP6G8JMa7o7lXvnz3GFKzPxzJdPfGK" crossorigin="anonymous"></script>
+        <script src="/assets/todo_list.js"></script>
         <link href="/assets/styles.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <div if="todo-table">
-            <form>
+            <form method="POST" action="/todo">
                 <input type="text" name="item" placeholder="Add new item..." required>
                 <button type="submit">Add Item</button>
             </form>
-            <ul>
-                <li>Item 1</li>
-                <li>Item 2</li>
-                <li>Item 3</li>
+            <ul><% for(let i=0; i < todos.length; i++){ %>
+                <li><%= todos[i].item %></li>
+            <% } %>
             </ul>
         </div>
     </body>
